# rabbitmq_docker_cpp-WIP

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE  libamq.BUILD
src/cpp/: BUILD
src/cpp/example/: amqp_lib.cpp  amqp_lib.h  app.cpp
